test/fail/basic_syntax/continue_outside_loop.lily
#[
SyntaxError: 'continue' used outside of a loop.
    from continue_outside_loop.lily:6:
]#

continue
